"""
Audit Event Types for GL-016 Waterguard

This module defines strongly-typed audit event models for the Waterguard
boiler water chemistry optimization agent. All events are immutable,
timestamped, and include correlation IDs for distributed tracing.

Event Types:
    - ChemistryCalculationEvent: Water chemistry calculations
    - RecommendationGeneratedEvent: Blowdown/dosing recommendations
    - CommandExecutedEvent: Control commands sent to equipment
    - ConstraintViolationEvent: Chemistry constraint violations
    - ConfigChangeEvent: Configuration changes
    - OperatorActionEvent: Operator actions and overrides

Example:
    >>> from audit_events import ChemistryCalculationEvent
    >>> event = ChemistryCalculationEvent(
    ...     correlation_id="corr-12345",
    ...     asset_id="boiler-001",
    ...     conductivity_us_cm=1250.5,
    ...     ph=9.2
    ... )
    >>> event.event_hash
    'a1b2c3d4...'

Author: GreenLang Process Heat Team
Version: 1.0.0
"""

from __future__ import annotations

import hashlib
import json
from datetime import datetime, timezone
from enum import Enum
from typing import Any, Dict, List, Optional, Union
from uuid import UUID, uuid4

from pydantic import BaseModel, Field, validator, root_validator


class EventType(str, Enum):
    """Enumeration of all audit event types for Waterguard."""

    CHEMISTRY_CALCULATION = "CHEMISTRY_CALCULATION"
    RECOMMENDATION_GENERATED = "RECOMMENDATION_GENERATED"
    COMMAND_EXECUTED = "COMMAND_EXECUTED"
    CONSTRAINT_VIOLATION = "CONSTRAINT_VIOLATION"
    CONFIG_CHANGE = "CONFIG_CHANGE"
    OPERATOR_ACTION = "OPERATOR_ACTION"
    SYSTEM = "SYSTEM"


class ChemistryParameter(str, Enum):
    """Water chemistry parameters tracked by Waterguard."""

    CONDUCTIVITY = "CONDUCTIVITY"
    PH = "PH"
    SILICA = "SILICA"
    PHOSPHATE = "PHOSPHATE"
    DISSOLVED_OXYGEN = "DISSOLVED_OXYGEN"
    TOTAL_DISSOLVED_SOLIDS = "TDS"
    ALKALINITY = "ALKALINITY"
    HARDNESS = "HARDNESS"
    CHLORIDE = "CHLORIDE"
    SULFATE = "SULFATE"
    IRON = "IRON"
    COPPER = "COPPER"


class RecommendationType(str, Enum):
    """Types of recommendations generated by Waterguard."""

    BLOWDOWN_RATE = "BLOWDOWN_RATE"
    BLOWDOWN_TIMING = "BLOWDOWN_TIMING"
    PHOSPHATE_DOSING = "PHOSPHATE_DOSING"
    OXYGEN_SCAVENGER_DOSING = "OXYGEN_SCAVENGER_DOSING"
    AMINE_DOSING = "AMINE_DOSING"
    PH_ADJUSTMENT = "PH_ADJUSTMENT"
    CYCLES_OF_CONCENTRATION = "CYCLES_OF_CONCENTRATION"
    FEEDWATER_ADJUSTMENT = "FEEDWATER_ADJUSTMENT"


class CommandType(str, Enum):
    """Types of control commands issued by Waterguard."""

    BLOWDOWN_VALVE_OPEN = "BLOWDOWN_VALVE_OPEN"
    BLOWDOWN_VALVE_CLOSE = "BLOWDOWN_VALVE_CLOSE"
    BLOWDOWN_RATE_SETPOINT = "BLOWDOWN_RATE_SETPOINT"
    DOSING_PUMP_START = "DOSING_PUMP_START"
    DOSING_PUMP_STOP = "DOSING_PUMP_STOP"
    DOSING_RATE_SETPOINT = "DOSING_RATE_SETPOINT"
    ANALYZER_CALIBRATION = "ANALYZER_CALIBRATION"


class ConstraintType(str, Enum):
    """Types of chemistry constraints in Waterguard."""

    ASME_LIMIT = "ASME_LIMIT"
    ABMA_LIMIT = "ABMA_LIMIT"
    EQUIPMENT_LIMIT = "EQUIPMENT_LIMIT"
    PROCESS_LIMIT = "PROCESS_LIMIT"
    ENVIRONMENTAL_LIMIT = "ENVIRONMENTAL_LIMIT"
    OPERATIONAL_LIMIT = "OPERATIONAL_LIMIT"


class OperatorActionType(str, Enum):
    """Types of operator actions tracked."""

    APPROVE = "APPROVE"
    REJECT = "REJECT"
    MODIFY = "MODIFY"
    OVERRIDE = "OVERRIDE"
    ACKNOWLEDGE = "ACKNOWLEDGE"
    ESCALATE = "ESCALATE"


class OperatorType(str, Enum):
    """Entity that initiated or approved an action."""

    AGENT = "AGENT"
    OPERATOR = "OPERATOR"
    SUPERVISOR = "SUPERVISOR"
    SYSTEM = "SYSTEM"
    WATER_TREATMENT_SPECIALIST = "WATER_TREATMENT_SPECIALIST"


class SeverityLevel(str, Enum):
    """Severity levels for events and violations."""

    INFO = "INFO"
    WARNING = "WARNING"
    CRITICAL = "CRITICAL"
    EMERGENCY = "EMERGENCY"


class ChemistryReading(BaseModel):
    """A single chemistry reading with metadata."""

    parameter: ChemistryParameter = Field(..., description="Chemistry parameter")
    value: float = Field(..., description="Measured value")
    unit: str = Field(..., description="Engineering unit")
    timestamp: datetime = Field(..., description="Reading timestamp")
    analyzer_id: Optional[str] = Field(None, description="Analyzer ID")
    quality: str = Field(default="GOOD", description="Data quality indicator")
    is_manual: bool = Field(default=False, description="Manual entry flag")

    class Config:
        frozen = True
        json_encoders = {datetime: lambda v: v.isoformat()}


class ConstraintLimit(BaseModel):
    """Definition of a chemistry constraint limit."""

    constraint_id: str = Field(..., description="Unique constraint ID")
    parameter: ChemistryParameter = Field(..., description="Parameter constrained")
    constraint_type: ConstraintType = Field(..., description="Type of constraint")
    min_value: Optional[float] = Field(None, description="Minimum allowed value")
    max_value: Optional[float] = Field(None, description="Maximum allowed value")
    target_value: Optional[float] = Field(None, description="Target value")
    unit: str = Field(..., description="Engineering unit")
    pressure_psig: Optional[float] = Field(None, description="Applicable pressure")
    standard_reference: Optional[str] = Field(None, description="ASME/ABMA reference")

    class Config:
        frozen = True


class BaseWaterguardEvent(BaseModel):
    """
    Base class for all Waterguard audit events.

    All audit events inherit from this base class which provides:
    - Unique event ID
    - Correlation ID for distributed tracing
    - Timestamps
    - Event hashing for integrity verification
    """

    event_id: UUID = Field(default_factory=uuid4, description="Unique event identifier")
    correlation_id: str = Field(..., description="Correlation ID for distributed tracing")
    event_type: EventType = Field(..., description="Type of audit event")
    timestamp: datetime = Field(
        default_factory=lambda: datetime.now(timezone.utc),
        description="Event creation timestamp"
    )
    asset_id: str = Field(..., description="Boiler or equipment identifier")
    facility_id: Optional[str] = Field(None, description="Facility/plant identifier")
    agent_id: str = Field(default="GL-016", description="Agent that generated event")
    agent_version: str = Field(default="1.0.0", description="Agent software version")
    operator_id: Optional[str] = Field(None, description="Operator ID if applicable")
    operator_type: OperatorType = Field(
        default=OperatorType.AGENT, description="Type of entity"
    )
    previous_event_hash: Optional[str] = Field(
        None, description="Hash of previous event in chain"
    )
    metadata: Dict[str, Any] = Field(
        default_factory=dict, description="Additional metadata"
    )

    class Config:
        frozen = True
        json_encoders = {
            datetime: lambda v: v.isoformat(),
            UUID: lambda v: str(v),
        }

    @property
    def event_hash(self) -> str:
        """
        Calculate SHA-256 hash of event for integrity verification.

        Returns:
            Hex-encoded SHA-256 hash of event content.
        """
        event_data = self.dict(exclude={"event_hash"})
        json_str = json.dumps(event_data, sort_keys=True, default=str)
        return hashlib.sha256(json_str.encode("utf-8")).hexdigest()

    def to_chain_dict(self) -> Dict[str, Any]:
        """Convert event to dictionary suitable for hash chain linking."""
        data = self.dict()
        data["event_hash"] = self.event_hash
        return data


class ChemistryCalculationEvent(BaseWaterguardEvent):
    """
    Audit event for water chemistry calculations.

    Captures all chemistry readings, calculations, and derived values
    used in optimization decisions.

    Example:
        >>> event = ChemistryCalculationEvent(
        ...     correlation_id="corr-12345",
        ...     asset_id="boiler-001",
        ...     conductivity_us_cm=1250.5,
        ...     ph=9.2
        ... )
    """

    event_type: EventType = Field(default=EventType.CHEMISTRY_CALCULATION, const=True)

    # Chemistry readings
    conductivity_us_cm: Optional[float] = Field(None, ge=0, description="Conductivity in uS/cm")
    ph: Optional[float] = Field(None, ge=0, le=14, description="pH value")
    silica_ppm: Optional[float] = Field(None, ge=0, description="Silica in ppm")
    phosphate_ppm: Optional[float] = Field(None, ge=0, description="Phosphate in ppm")
    dissolved_oxygen_ppb: Optional[float] = Field(None, ge=0, description="Dissolved oxygen in ppb")
    tds_ppm: Optional[float] = Field(None, ge=0, description="Total dissolved solids in ppm")
    alkalinity_ppm: Optional[float] = Field(None, ge=0, description="Alkalinity in ppm CaCO3")
    hardness_ppm: Optional[float] = Field(None, ge=0, description="Hardness in ppm CaCO3")
    chloride_ppm: Optional[float] = Field(None, ge=0, description="Chloride in ppm")
    sulfate_ppm: Optional[float] = Field(None, ge=0, description="Sulfate in ppm")
    iron_ppb: Optional[float] = Field(None, ge=0, description="Iron in ppb")
    copper_ppb: Optional[float] = Field(None, ge=0, description="Copper in ppb")

    # All readings as structured list
    readings: List[ChemistryReading] = Field(
        default_factory=list, description="All chemistry readings"
    )

    # Calculated values
    cycles_of_concentration: Optional[float] = Field(None, ge=1, description="Cycles of concentration")
    blowdown_rate_pct: Optional[float] = Field(None, ge=0, le=100, description="Current blowdown rate %")
    makeup_rate_gpm: Optional[float] = Field(None, ge=0, description="Makeup water rate GPM")
    steam_flow_klb_hr: Optional[float] = Field(None, ge=0, description="Steam flow klb/hr")

    # Operating conditions
    drum_pressure_psig: Optional[float] = Field(None, ge=0, description="Drum pressure PSIG")
    drum_temperature_f: Optional[float] = Field(None, description="Drum temperature F")
    feedwater_temperature_f: Optional[float] = Field(None, description="Feedwater temperature F")

    # Constraint distances
    constraint_distances: Dict[str, float] = Field(
        default_factory=dict, description="Distance to constraints"
    )

    # Calculation provenance
    calculation_version: str = Field(default="1.0.0", description="Calculation engine version")
    formula_hash: Optional[str] = Field(None, description="Hash of formulas used")
    input_data_hash: str = Field(..., description="Hash of input data")

    @validator("cycles_of_concentration")
    def validate_cycles(cls, v):
        """Validate cycles of concentration is reasonable."""
        if v is not None and v > 50:
            raise ValueError("Cycles of concentration > 50 is unreasonable")
        return v


class RecommendationGeneratedEvent(BaseWaterguardEvent):
    """
    Audit event for recommendations generated by Waterguard.

    Captures blowdown rate, dosing, and other recommendations with
    full provenance of inputs and calculations.
    """

    event_type: EventType = Field(default=EventType.RECOMMENDATION_GENERATED, const=True)

    # Recommendation identification
    recommendation_id: str = Field(..., description="Unique recommendation ID")
    recommendation_type: RecommendationType = Field(..., description="Type of recommendation")

    # Input references
    chemistry_event_id: str = Field(..., description="Related chemistry calculation event")
    input_data_hash: str = Field(..., description="Hash of all input data")

    # Recommendation details
    current_value: float = Field(..., description="Current setpoint/value")
    recommended_value: float = Field(..., description="Recommended setpoint/value")
    unit: str = Field(..., description="Engineering unit")
    min_allowed: float = Field(..., description="Minimum allowed value")
    max_allowed: float = Field(..., description="Maximum allowed value")

    # Timing
    recommended_duration_minutes: Optional[float] = Field(
        None, ge=0, description="Duration for timed actions"
    )
    effective_time: Optional[datetime] = Field(None, description="When to implement")

    # Rationale
    explanation: str = Field(..., description="Natural language explanation")
    contributing_factors: Dict[str, float] = Field(
        default_factory=dict, description="Factors influencing recommendation"
    )

    # Expected impact
    expected_water_savings_gal_hr: Optional[float] = Field(None, description="Expected water savings")
    expected_energy_savings_mmbtu_hr: Optional[float] = Field(None, description="Expected energy savings")
    expected_chemical_savings_usd_hr: Optional[float] = Field(None, description="Expected chemical savings")

    # Confidence
    confidence_score: float = Field(..., ge=0, le=1, description="Recommendation confidence 0-1")
    uncertainty_lower: Optional[float] = Field(None, description="Lower uncertainty bound")
    uncertainty_upper: Optional[float] = Field(None, description="Upper uncertainty bound")

    # Model information
    model_version: Optional[str] = Field(None, description="ML model version if used")
    model_hash: Optional[str] = Field(None, description="ML model hash if used")


class CommandExecutedEvent(BaseWaterguardEvent):
    """
    Audit event for control commands executed by Waterguard.

    Captures all commands sent to equipment with approval chain
    and execution status.
    """

    event_type: EventType = Field(default=EventType.COMMAND_EXECUTED, const=True)

    # Command identification
    command_id: str = Field(..., description="Unique command ID")
    command_type: CommandType = Field(..., description="Type of command")

    # Related recommendation
    recommendation_id: Optional[str] = Field(None, description="Related recommendation ID")

    # Target
    target_tag: str = Field(..., description="OPC/control tag")
    target_equipment: str = Field(..., description="Target equipment description")

    # Values
    target_value: float = Field(..., description="Target setpoint value")
    previous_value: Optional[float] = Field(None, description="Previous value before command")
    actual_value: Optional[float] = Field(None, description="Actual achieved value")
    unit: str = Field(..., description="Engineering unit")

    # Approval
    approved_by: str = Field(..., description="Approver ID")
    approval_timestamp: datetime = Field(..., description="When approved")
    approval_type: str = Field(..., description="Manual/automatic approval")

    # Execution
    execution_timestamp: datetime = Field(..., description="When command executed")
    execution_status: str = Field(..., description="SUCCESS/FAILED/TIMEOUT")
    execution_duration_ms: Optional[float] = Field(None, ge=0, description="Execution duration")
    error_message: Optional[str] = Field(None, description="Error if failed")

    # Verification
    verified: bool = Field(default=False, description="Whether execution verified")
    verification_timestamp: Optional[datetime] = Field(None, description="When verified")
    verification_value: Optional[float] = Field(None, description="Verified value")


class ConstraintViolationEvent(BaseWaterguardEvent):
    """
    Audit event for chemistry constraint violations.

    Captures violations of ASME, ABMA, or operational constraints
    with severity and required actions.
    """

    event_type: EventType = Field(default=EventType.CONSTRAINT_VIOLATION, const=True)

    # Violation identification
    violation_id: str = Field(..., description="Unique violation ID")
    constraint: ConstraintLimit = Field(..., description="Violated constraint")

    # Violation details
    parameter: ChemistryParameter = Field(..., description="Parameter in violation")
    current_value: float = Field(..., description="Current parameter value")
    limit_value: float = Field(..., description="Limit that was violated")
    deviation_pct: float = Field(..., description="Deviation from limit as percentage")
    unit: str = Field(..., description="Engineering unit")

    # Severity
    severity: SeverityLevel = Field(..., description="Violation severity")
    is_trending_worse: bool = Field(default=False, description="Whether trend is worsening")

    # Duration
    violation_start: datetime = Field(..., description="When violation started")
    violation_duration_minutes: Optional[float] = Field(None, ge=0, description="Duration in minutes")

    # Recommended response
    recommended_action: str = Field(..., description="Recommended corrective action")
    auto_response_enabled: bool = Field(default=False, description="Whether auto-response active")
    auto_response_taken: Optional[str] = Field(None, description="Auto response if taken")

    # Related events
    related_chemistry_event_id: Optional[str] = Field(None, description="Related chemistry event")
    related_recommendation_id: Optional[str] = Field(None, description="Triggered recommendation")


class ConfigChangeEvent(BaseWaterguardEvent):
    """
    Audit event for configuration changes.

    Captures all changes to Waterguard configuration including
    constraints, setpoints, and operational parameters.
    """

    event_type: EventType = Field(default=EventType.CONFIG_CHANGE, const=True)

    # Change identification
    change_id: str = Field(..., description="Unique change ID")
    config_section: str = Field(..., description="Configuration section changed")
    config_key: str = Field(..., description="Configuration key changed")

    # Values
    before_value: Any = Field(..., description="Value before change")
    after_value: Any = Field(..., description="Value after change")

    # Approval
    approved_by: str = Field(..., description="Approver ID")
    approval_timestamp: datetime = Field(..., description="When approved")
    change_reason: str = Field(..., description="Reason for change")

    # Version tracking
    config_version_before: str = Field(..., description="Config version before")
    config_version_after: str = Field(..., description="Config version after")
    config_hash_before: str = Field(..., description="Config hash before")
    config_hash_after: str = Field(..., description="Config hash after")

    # Rollback capability
    is_reversible: bool = Field(default=True, description="Whether change can be rolled back")
    rollback_deadline: Optional[datetime] = Field(None, description="Deadline for rollback")


class OperatorActionEvent(BaseWaterguardEvent):
    """
    Audit event for operator actions and overrides.

    Captures all operator interventions including approvals,
    rejections, modifications, and overrides.
    """

    event_type: EventType = Field(default=EventType.OPERATOR_ACTION, const=True)

    # Action identification
    action_id: str = Field(..., description="Unique action ID")
    action_type: OperatorActionType = Field(..., description="Type of operator action")

    # Related entity
    related_event_id: str = Field(..., description="ID of event being acted upon")
    related_event_type: EventType = Field(..., description="Type of related event")

    # Operator details
    operator_name: Optional[str] = Field(None, description="Operator name")
    operator_role: str = Field(..., description="Operator role/authorization")
    authorization_level: str = Field(..., description="Required authorization level")

    # Action details
    original_value: Optional[Any] = Field(None, description="Original value if modified")
    modified_value: Optional[Any] = Field(None, description="Modified value")
    justification: str = Field(..., description="Justification for action")

    # Override specifics (if override)
    override_duration_hours: Optional[float] = Field(None, ge=0, description="Override duration")
    override_expiry: Optional[datetime] = Field(None, description="Override expiry time")
    requires_review: bool = Field(default=True, description="Whether periodic review required")

    # Risk assessment
    risk_assessment: Optional[str] = Field(None, description="Risk assessment if applicable")
    safety_review_required: bool = Field(default=False, description="Whether safety review needed")


# Type alias for all Waterguard audit events
WaterguardAuditEvent = Union[
    ChemistryCalculationEvent,
    RecommendationGeneratedEvent,
    CommandExecutedEvent,
    ConstraintViolationEvent,
    ConfigChangeEvent,
    OperatorActionEvent,
]


def create_event_from_dict(data: Dict[str, Any]) -> WaterguardAuditEvent:
    """
    Factory function to create appropriate event type from dictionary.

    Args:
        data: Dictionary containing event data with 'event_type' field.

    Returns:
        Appropriate WaterguardAuditEvent subclass instance.

    Raises:
        ValueError: If event_type is unknown.
    """
    event_type = data.get("event_type")

    event_classes = {
        EventType.CHEMISTRY_CALCULATION: ChemistryCalculationEvent,
        EventType.RECOMMENDATION_GENERATED: RecommendationGeneratedEvent,
        EventType.COMMAND_EXECUTED: CommandExecutedEvent,
        EventType.CONSTRAINT_VIOLATION: ConstraintViolationEvent,
        EventType.CONFIG_CHANGE: ConfigChangeEvent,
        EventType.OPERATOR_ACTION: OperatorActionEvent,
    }

    if isinstance(event_type, str):
        event_type = EventType(event_type)

    event_class = event_classes.get(event_type)
    if event_class is None:
        raise ValueError(f"Unknown event type: {event_type}")

    return event_class(**data)
